@@ -106,7 +106,7 @@ module ActiveRecord
         end
         
         def remove_index!(table_name, index_name)
-          do_execute "DROP INDEX #{quote_table_name(table_name)}.#{quote_column_name(index_name)}"
+          do_execute "DROP INDEX #{quote_column_name(index_name)} ON #{quote_table_name(table_name)}"
         end
 
         def type_to_sql(type, limit = nil, precision = nil, scale = nil)
