@@ -1,6 +1,8 @@
 
 * master *
 
+* Azure compatibility.
+
 * TinyTDS enhancements for lost connections.
 
 
